<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.htan.myapplication.StockCountSwipeActivity"
    >
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always|withText"
        android:visible="true"
        />
    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom"
        android:visible="true"
        />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="ifRoom"
        android:visible="true"
        />
</menu>
