<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.htan.myapplication.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stockperiodTxt_home_activity"
        android:id="@+id/stockPeriodText"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:textColor="#000000"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stockperiodStatusTxt_home_activity"
        android:layout_below="@+id/stockPeriodText"
        android:id="@+id/stockPeriodStatusText"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:textColor="#000000"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/siteSpinner"
        android:layout_below="@+id/stockPeriodStatusText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="15dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stockcountbarcode_activity_home"
        android:id="@+id/ScanBarcodeBtn"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/siteSpinner"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stockcountname_activity_home"
        android:id="@+id/SearchByNameBtn"
        android:layout_below="@+id/ScanBarcodeBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewAllStockCountButton_activity_home"
        android:id="@+id/ViewAllStockCountBtn"
        android:layout_below="@+id/SearchByNameBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadStockCountItemButton_activity_home"
        android:visibility="gone"
        android:id="@+id/DownloadStockCountItemBtn"
        android:layout_below="@+id/ViewAllStockCountBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadStockCountButton_activity_home"
        android:visibility="gone"
        android:id="@+id/UploadStockCountBtn"
        android:layout_below="@+id/DownloadStockCountItemBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByVoiceBtn"
            android:id="@+id/SearchByVoiceButton"
            android:layout_below="@+id/UploadStockCountBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printBtn"
            android:id="@+id/PrintButton"
            android:layout_below="@+id/SearchByVoiceButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />


    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center" />
    </FrameLayout>

</RelativeLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>

</android.support.v4.widget.DrawerLayout>