<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.htan.myapplication.OrganisationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selectOrgProfileTxt_organisation_activity"
        android:id="@+id/selectOrgProfileText"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/selectOrgProfileText"
        android:text="@string/organisationTxt_organisation_activity"
        android:id="@+id/organisationText"
        android:layout_alignParentLeft="true"
        android:paddingTop="35dp"
        android:textColor="#000000"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/organisationSpinner"
        android:layout_toRightOf="@+id/organisationText"
        android:layout_alignBaseline="@+id/organisationText" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profileTxt_organisation_activity"
        android:id="@+id/profileText"
        android:layout_below="@+id/organisationText"
        android:layout_alignParentLeft="true"
        android:textColor="#000000"
        android:paddingTop="30dp"
        />



    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileSpinner"
        android:layout_below="@+id/organisationSpinner"
        android:layout_toRightOf="@+id/profileText"
        android:layout_alignBaseline="@+id/profileText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton_activity_organisation"
        android:id="@+id/organisationNextButton"
        android:layout_below="@+id/profileText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp" />

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>
