

        <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context="com.example.htan.myapplication.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fourthLogo"
        android:src="@drawable/fourthlogo"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
       />

    <TextView
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:text="@string/login_Title"
        android:id="@+id/loginTitle"
        android:layout_below="@+id/fourthLogo"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:paddingTop="10dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/loginusername_textbox"
        android:id="@+id/usernameTextBox"
        android:layout_below="@+id/loginTitle"
        android:layout_centerHorizontal="true"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/loginpassword_textbox"
        android:id="@+id/passwordTextBox"
        android:layout_below="@+id/usernameTextBox"
        android:layout_centerHorizontal="true"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordTextBox"
        android:layout_centerHorizontal="true"
        />

            <FrameLayout
                android:id="@+id/progressBarHolder"
                android:animateLayoutChanges="true"
                android:visibility="gone"
                android:alpha="0.4"
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_gravity="center" />
            </FrameLayout>

        </RelativeLayout>



